examples/good/6-div-by-0.afl
main :: Int;

Let main = ((1)/(0));