examples/bad/13-main-unknown-type.afl
main::UnknownType;

Let main = (0);